--- a/meu_projeto/templates/index.html
+++ b/meu_projeto/templates/index.html
@@ -52,13 +52,13 @@
         <div class="container">
             <div class="box result">
                 <h2>Resultados</h2>
-                <img src="static\reposta_açao_petrobras.png" alt="Resultado">
+                <img src="static\reposta_acao_petrobras.png" alt="Resultado">
             </div>
         </div>
         <div class="container">
             <div class="box result">
                 <h2>Detecção de sono</h2>
-                <img src="static\detecção_sono.gif" alt="Resultado">
+                <img src="static\deteccao_sono.gif" alt="Resultado">
             </div>
         </div>
         <div class="container">
