--- a/meu_projeto/templates/index.html
+++ b/meu_projeto/templates/index.html
@@ -39,32 +39,32 @@
         <div class="container">
             <div class="box result">
                 <h2>identificador de gato ou cachorro</h2>
-                <img src="meu_projeto/static\resultado1_projeto_dog_or_cat.png" alt="Primeiro resultado">
-                <img src="meu_projeto/static\resultado2_projeto_dog_or_cat.png" alt="Segundo resultado">
+                <img src="meu_projeto\static\resultado1_projeto_dog_or_cat.png" alt="Primeiro resultado">
+                <img src="meu_projeto\static\resultado2_projeto_dog_or_cat.png" alt="Segundo resultado">
             </div>
         </div>
         <div class="container">
             <div class="box result">
                 <h2>Jogo da velha</h2>
-                <img src="meu_projeto/static\jogo_da_velha.gif" alt="Resultado">
+                <img src="meu_projeto\static\jogo_da_velha.gif" alt="Resultado">
             </div>
         </div>
         <div class="container">
             <div class="box result">
                 <h2>Resultados</h2>
-                <img src="meu_projeto/static\reposta_acao_petrobras.png" alt="Resultado">
+                <img src="meu_projeto\static\reposta_acao_petrobras.png" alt="Resultado">
             </div>
         </div>
         <div class="container">
             <div class="box result">
                 <h2>Detecção de sono</h2>
-                <img src="meu_projeto/static\deteccao_sono.gif" alt="Resultado">
+                <img src="meu_projeto\static\deteccao_sono.gif" alt="Resultado">
             </div>
         </div>
         <div class="container">
             <div class="box result">
                 <h2>Jogo Flappy Bird por IA</h2>
-                <img src="meu_projeto/static\Flappy_BirdIA.gif" alt="Resultado">
+                <img src="meu_projeto\static\Flappy_BirdIA.gif" alt="Resultado">
             </div>
         </div>
     </body>
