--- a/meu_projeto/templates/index.html
+++ b/meu_projeto/templates/index.html
@@ -52,7 +52,7 @@
         <div class="container">
             <div class="box result">
                 <h2>Resultados</h2>
-                <img src="meu_projeto\static\reposta_acao_petrobras.png" alt="Resultado">
+                <img src="meu_projeto/static/reposta_acao_petrobras.png" alt="Resultado">
             </div>
         </div>
         <div class="container">
@@ -68,4 +68,5 @@
             </div>
         </div>
     </body>
+
 </html>
