Atualizando index.html

--- a/meu_projeto/templates/index.html
+++ b/meu_projeto/templates/index.html
@@ -67,6 +67,11 @@
                 <img src="meu_projeto\static\Flappy_BirdIA.gif" alt="Resultado">
             </div>
         </div>
+        <div class="container">
+            <div class="box result">
+                <h2>Detecções de carros</h2>
+                <img src="meu_projeto\static\deteccao_de_carro.gif" alt="Resultado">
+            </div>
+        </div>
     </body>
-
 </html>
