Adicionando GIFs e imagens ao projeto

--- a/meu_projeto/templates/index.html
+++ b/meu_projeto/templates/index.html
@@ -25,10 +25,10 @@
                 color: black;
             }
             .result img {
-              display: block;
-              max-width: 100%;
-              border-radius: 10px;
-              border: 1px solid #ddd;
+                display: block;
+                max-width: 100%;
+                border-radius: 10px;
+                border: 1px solid #ddd;
             }
         </style>
     </head>
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="box result">
                 <h2>identificador de gato ou cachorro</h2>
-                <img src="cientista_de_dado\meu_projeto\static\resultado1_projeto_dog_or_cat.png" alt="Primeiro resultado">
+                <img src="meu_projeto/static/resultado1_projeto_dog_or_cat.png" alt="Primeiro resultado">
                 <img src="meu_projeto/static/resultado2_projeto_dog_or_cat.png" alt="Segundo resultado">
             </div>
         </div>
